fix: postman test